add a function of getting a group of users' basic info
